# soshiki-proxy-desktop

./: Cargo.toml  build.linux.aarch64.sh  build.linux.sh  build.linux.x86_64.sh  build.mac.sh  build.win.ps1  build.win.sh
src/: main.rs
